fix: Cropper.tsx; ru.json; en.json; SettingsFormSchema.ts; SignUpFormSchema.ts; CreateNewPasswordFormSchema.ts

--- a/src/app/[locale]/settings-profile/SettingsForm/SettingsForm.module.scss
+++ b/src/app/[locale]/settings-profile/SettingsForm/SettingsForm.module.scss
@@ -93,7 +93,11 @@
     position: absolute;
     bottom: -15px;
     left: 0;
-    font-size: 12px;
+    font-size: 11px;
+
+    &__bottom {
+      bottom: -24px;
+    }
   }
 
   &__itemWrapper {
